--- a/css/style.css
+++ b/css/style.css
@@ -20,17 +20,18 @@
 }
 
 .arrow{
-    background-color: rgba(90, 64, 238, 0.484);
+    background-color: rgba(119, 97, 244, 0.383);
     height: 4rem;
     width: 4rem;
     border-radius: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
-    color: white;
-    font-size: 1rem;
-    
+    color: rgba(255, 255, 255, 0.555);
+    font-size: 1.5rem;
+    z-index: 100;
 }
+
 
 #next{
     top: 16%;
@@ -51,4 +52,11 @@
     height: 100%;
     object-fit: cover;
 
+}
+.invisible{
+    display: none;
+}
+
+.active{
+    display: block;
 }
